added stories to the possible cards

--- a/www-root/possible.html
+++ b/www-root/possible.html
@@ -154,9 +154,9 @@
   <section class="white-background-right-photo" id="reimagine-higher-education">
   <div class="container">
     <h2 style="margin-bottom:30px;">What’s <span class="possible-word">possible</span> when you reimagine higher education?</h2>
-    <h4><i>
+    <h3><i>
         A thriving urban university that fosters student success through classroom-to-career connections, relevant degrees and excellent faculty.
-      </i></h4>
+      </i></h3>
     <div class="row">
       <div class="col-xs-12 col-md-6">
         <p>
@@ -176,9 +176,9 @@
 
     <div class="row">
       <div class="col-xs-12 col-md-6">
-        <h4><i>
+        <h3><i>
             99% of our classes are taught by faculty, not teaching assistants. They are industry icons, national experts and have the highest degrees in their disciplines.
-          </i></h4>
+          </i></h3>
         <p>Learn to fight crime from the former director of the NCIS. Analyze graphic novels with the convention director of Denver’s Comic Con. Get bitten by the insect bug with a renowned mosquito biologist. Our professors are experts in their
           fields, but even better at passing on their expertise to students.</p>
       </div>
@@ -192,7 +192,9 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <h2>master-your-future</h2>
+        <h2>Here, you can master your future.</h2>
+        <h3>Master’s degrees in business, health, teaching and technology designed to advance your career and community.</h3>
+        <p>Advance your community – and your career – with an advanced degree in a critical Colorado field.</p>
       </div>
     </div>
   </div>
@@ -201,7 +203,9 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <h2>on-the-front-lines-of-cybersecurity</h2>
+        <h2>On the front lines of cybersecurity.</h2>
+        <h3>Our groundbreaking program taught by industry experts blends technology and human behavior to advance careers in this critical field.</h3>
+        <p>Figuring out the crime before the criminals?</p>
       </div>
     </div>
   </div>
@@ -210,7 +214,9 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <h2>brewing-innovation-in-hospitality</h2>
+        <h2>Brewing innovation at our School of Hospitality.</h2>
+        <h3>Hands-on experience at Colorado’s only on-campus hotel, brewery and wine-cellar management lab.</h3>
+        <p>Leading the next generation of hospitality?</p>
       </div>
     </div>
   </div>
@@ -219,7 +225,11 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <h2>improving-health-in-colorado</h2>
+        <h2>A prescription for improving health in Colorado.</h2>
+        <h3>Our new Health Institute integrates 10 disciplines to improve lives, communities and careers.</h3>
+        <p>Leading the way in the transformative field of lifestyle medicine. 
+          Developing applied opportunities with partners like Denver Health to empower tomorrow’s wellness leaders.
+          Helping underserved populations navigate access to health care across the state.</p>
       </div>
     </div>
   </div>
@@ -228,7 +238,9 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <h2>teaching-tomorrows-teachers</h2>
+        <h2>Teaching tomorrow’s teachers.</h2>
+        <h3>A leading provider of diverse, classroom-ready graduates with a passion to serve Colorado children</h3>
+        <p>Teacher education isn’t theoretical at MSU Denver – 95% of our education faculty were teachers themselves and know what it takes for teachers (and students!) to succeed in schools.</p>
       </div>
     </div>
   </div>
@@ -237,7 +249,11 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <h2>operating-satelites-from-the-classroom</h2>
+        <h2>We’re operating satellites from the classroom.</h2>
+        <h3>Innovative partnerships with leading aerospace companies and hands-on opportunities to launch space-related careers.</h3>
+        <p>The Final Frontier? Metropolitan State University of Denver’s Aerospace Science program is already there.
+
+            Our Aerospace Science students design batteries for small spacecraft, assist researchers protecting the planet from asteroid strikes and improve the efficiency with which major defense contractors build satellites.</p>
       </div>
     </div>
   </div>
@@ -246,11 +262,11 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <h2>Multiply your ROI.</h2>
-        <h3>Our internationally accredited business college offers the best value in Colorado, a startup spirit and the only sales center in the state.
+        <h2>Best ROI in the business.</h2>
+        <h3>As the best-value business college in Colorado, we offer a startup spirit and the only sales center in the state – backed up by an international accreditation.
         </h3>
 
-        <h3>That’s possible here.</h3>
+        <p>Buy your parents a house while putting yourself through college. Leave homelessness behind to open your own brewery. Buy a franchise with winnings from a national entrepreneur contest. Fulfill the American Dream.</p>
       </div>
     </div>
   </div>
