start your possible class change, adds test sidenav

--- a/development/terminalfour/src/html/possible.html
+++ b/development/terminalfour/src/html/possible.html
@@ -101,7 +101,7 @@
   </section>
 
   @@include('possible/start-your-possible.html')
-
+  <!-- @@include('possible/side-navigation.html') -->
   @@include('possible/reimagine-higher-education.html')
   @@include('possible/learners-connect-with-leaders.html')
   @@include('possible/master-your-future.html')
@@ -115,7 +115,12 @@
 
   @@include('possible/white-background-right-photo.html')
   @@include('possible/background-right-copy.html')
+  @@include('possible/blue-background.html')
+
   @@include('possible/call-to-action.html')
+
+
+
 
 
   <div class="footer">
