--- a/www-root/possible.html
+++ b/www-root/possible.html
@@ -100,14 +100,16 @@
     </div>
   </section>
 
-  <section class="start_your_possible" id="start">
+  <section class="blue-background" id="start">
   <div class="container">
     <div class="row">
-      <div class="col-xs-12 col-md-8 offset-md-4">
-        <h2>What would you do if anything were <span class="possible-word">possible</span> ?</h2>
-      </div>
-      <div class="col-xs-12 col-md-8 offset-md-4">
-        <p>Imagine a place where barriers are removed, opportunities are plentiful, labels are nonexistent and an entire community of peers, mentors, educators and industry leaders is ready to support you, encourage you and connect with you.</p>
+      <div class="col-xs-12 col-md-10 offset-md-1">
+        <h2>Are you ready to find your <span class="possible-word">possible</span> ?</h2>
+
+        <select>
+          <option value="Reimagine higher education">Reimagine higher education</option>
+          <option value="Learners connect with leaders">Learners connect with leaders</option>
+        </select>
       </div>
     </div>
   </div>
@@ -150,7 +152,7 @@
     </div>
   </div>
 </div>
-
+  <!--  -->
   <section class="white-background-right-photo" id="reimagine-higher-education">
   <div class="container">
     <h2 style="margin-bottom:30px;">What’s <span class="possible-word">possible</span> when you reimagine higher education?</h2>
@@ -296,6 +298,20 @@
     </div>
   </div>
 </section>
+  <section class="blue-background" id="start">
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12 col-md-8 offset-md-4">
+        <h2>Lorem Ipsum <span class="possible-word">possible</span> ?</h2>
+      </div>
+      <div class="col-xs-12 col-md-8 offset-md-4">
+        <p>Imagine a place where barriers are removed, opportunities are plentiful, labels are nonexistent and an entire community of peers, mentors, educators and industry leaders is ready to support you, encourage you and connect with you.</p>
+      </div>
+    </div>
+  </div>
+
+</section>
+
   <section class="possible-call-to-action">
   <div class="container">
     <div class="row">
@@ -316,6 +332,9 @@
     </div>
   </div>
 </section>
+
+
+
 
 
   <div class="footer">
