--- a/development/terminalfour/src/html/possible.html
+++ b/development/terminalfour/src/html/possible.html
@@ -100,6 +100,8 @@
     </div>
   </section>
 
+  @@include('possible/dropdown-navbar.html')
+
   @@include('possible/start-your-possible.html')
 
   @@include('possible/reimagine-higher-education.html')
