adds copy for teaching

--- a/development/terminalfour/src/html/possible.html
+++ b/development/terminalfour/src/html/possible.html
@@ -105,13 +105,13 @@
   @@include('possible/reimagine-higher-education.html')
   @@include('possible/learners-connect-with-leaders.html')
   @@include('possible/master-your-future.html')
-  @@include('possible/on-the-front-lines-of-cybersecurity.html')
-  @@include('possible/brewing-innovation-in-hospitality.html')
+  <!-- @@include('possible/on-the-front-lines-of-cybersecurity.html') -->
+  <!-- @@include('possible/brewing-innovation-in-hospitality.html') -->
   @@include('possible/improving-health-in-colorado.html')
   @@include('possible/teaching-tomorrows-teachers.html')
-  @@include('possible/operating-satelites-from-the-classroom.html')
-  @@include('possible/multiply-your-roi.html')
-  @@include('possible/saving-endangered-languages.html')
+  <!-- @@include('possible/operating-satelites-from-the-classroom.html') -->
+  <!-- @@include('possible/multiply-your-roi.html') -->
+  <!-- @@include('possible/saving-endangered-languages.html') -->
 
   @@include('possible/white-background-right-photo.html')
   @@include('possible/background-right-copy.html')
