--- a/www-root/possible.html
+++ b/www-root/possible.html
@@ -107,8 +107,8 @@
         <h2>Are you ready to find your <span class="possible-word">possible</span> ?</h2>
 
         <select>
-          <option value="Reimagine higher education">Reimagine higher education</option>
-          <option value="Learners connect with leaders">Learners connect with leaders</option>
+          <option href="#reimagine-higher-education value=" Reimagine higher education">Reimagine higher education</option>
+          <option href="#learners-connect-with-leaders" value="Learners connect with leaders">Learners connect with leaders</option>
         </select>
       </div>
     </div>
@@ -196,12 +196,13 @@
       <div class="col-xs-12">
         <h2>Here, you can master your future.</h2>
         <h3>Master’s degrees in business, health, teaching and technology designed to advance your career and community.</h3>
+        <img class="img-thumbnail" style="float:left;" src="style-assets/media/possible/MockTrial.jpg">
         <p>Advance your community – and your career – with an advanced degree in a critical Colorado field.</p>
       </div>
     </div>
   </div>
 </section>
-  <section id="on-the-front-lines-of-cybersecurity">
+  <!-- <section id="on-the-front-lines-of-cybersecurity">
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
@@ -211,8 +212,8 @@
       </div>
     </div>
   </div>
-</section>
-  <section id="brewing-innovation-in-hospitality">
+</section> -->
+  <!-- <section id="brewing-innovation-in-hospitality">
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
@@ -222,7 +223,7 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
   <section id="improving-health-in-colorado">
   <div class="container">
     <div class="row">
@@ -241,13 +242,15 @@
     <div class="row">
       <div class="col-xs-12">
         <h2>Teaching tomorrow’s teachers.</h2>
-        <h3>A leading provider of diverse, classroom-ready graduates with a passion to serve Colorado children</h3>
-        <p>Teacher education isn’t theoretical at MSU Denver – 95% of our education faculty were teachers themselves and know what it takes for teachers (and students!) to succeed in schools.</p>
+        <h3>A leading provider of diverse, classroom-ready graduates with a passion to serve Colorado children.</h3>
+        <p>Called to <a href="https://red.msudenver.edu/2019/third-gen-teacher-speaks-kids-language.html">teach bilingual students</a>? Need a <a href="https://www.msudenver.edu/teachergrad/">master’s degree</a> to advance in your career? Want to
+          <a href="https://red.msudenver.edu/2019/making-dreams-possible.html">open your own school</a>? Whether you’re a <a href="https://red.msudenver.edu/2019/bound-to-educate.html">first-generation student interested in early childhood
+            education</a> or a <a href="https://red.msudenver.edu/2017/fit-for-duty-the-veterans-who-teach-pe.html"> veteran going back to school to teach physical education</a>, you’ll get to the head of the class at MSU Denver.</p>
       </div>
     </div>
   </div>
 </section>
-  <section id="operating-satelites-from-the-classroom">
+  <!-- <section id="operating-satelites-from-the-classroom">
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
@@ -259,8 +262,8 @@
       </div>
     </div>
   </div>
-</section>
-  <section id="multiply-your-roi">
+</section> -->
+  <!-- <section id="multiply-your-roi">
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
@@ -272,8 +275,8 @@
       </div>
     </div>
   </div>
-</section>
-  <section id="saving-endangered-languages">
+</section> -->
+  <!-- <section id="saving-endangered-languages">
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
@@ -281,7 +284,7 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
 
   <section class="white-background-right-photo">
   <div class="container">
