adds images and background stories

--- a/development/terminalfour/src/html/possible.html
+++ b/development/terminalfour/src/html/possible.html
@@ -82,42 +82,28 @@
 </head>
 
 <body>
-  <section class="introduction">
-    <div class="container">
-      <div class="row">
-        <div class="col-xs-12 col-sm-12 col-md-12">
-          <h1>Reimagine <span class="possible-word fade-in">possible</span></h1>
-        </div>
 
-        <div class="col-xs-12 col-sm-6 col-md-2 offset-md-8 text-center">
-          <img class="img-responsive university-logo fade-in" src="style-assets/media/possible/MSUDenver_Formal_2CPos_BlueRed_WhBkgd_FormatA_RGB.svg">
-        </div>
-
-        <div class="col-xs-12 col-sm-4 offset-col-sm-4 col-md-12 text-center">
-          <a href="#start"> <span class="possible-indicator fas fa-chevron-down fa-5x fade-in"></span></a>
-        </div>
-      </div>
-    </div>
-  </section>
-
+  @@include('possible/introduction.html')
   @@include('possible/dropdown-navbar.html')
 
   @@include('possible/start-your-possible.html')
+  @@include('possible/improving-health-in-colorado.html')
   <!-- @@include('possible/side-navigation.html') -->
   @@include('possible/reimagine-higher-education.html')
-  @@include('possible/learners-connect-with-leaders.html')
+
   @@include('possible/master-your-future.html')
   <!-- @@include('possible/on-the-front-lines-of-cybersecurity.html') -->
   <!-- @@include('possible/brewing-innovation-in-hospitality.html') -->
-  @@include('possible/improving-health-in-colorado.html')
+
   @@include('possible/teaching-tomorrows-teachers.html')
+  @@include('possible/learners-connect-with-leaders.html')
   <!-- @@include('possible/operating-satelites-from-the-classroom.html') -->
   <!-- @@include('possible/multiply-your-roi.html') -->
   <!-- @@include('possible/saving-endangered-languages.html') -->
 
-  @@include('possible/white-background-right-photo.html')
-  @@include('possible/background-right-copy.html')
-  @@include('possible/blue-background.html')
+  <!-- @@include('possible/white-background-right-photo.html') -->
+  <!-- @@include('possible/background-right-copy.html') -->
+  <!-- @@include('possible/blue-background.html') -->
 
   @@include('possible/call-to-action.html')
 
