--- a/www-root/possible.html
+++ b/www-root/possible.html
@@ -82,24 +82,24 @@
 </head>
 
 <body>
+
   <section class="introduction">
-    <div class="container">
-      <div class="row">
-        <div class="col-xs-12 col-sm-12 col-md-12">
-          <h1>Reimagine <span class="possible-word fade-in">possible</span></h1>
-        </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12 col-sm-12 col-md-12">
+        <h1>Reimagine <span class="possible-word fade-in">possible</span></h1>
+      </div>
 
-        <div class="col-xs-12 col-sm-6 col-md-2 offset-md-8 text-center">
-          <img class="img-responsive university-logo fade-in" src="style-assets/media/possible/MSUDenver_Formal_2CPos_BlueRed_WhBkgd_FormatA_RGB.svg">
-        </div>
+      <div class="col-xs-12 col-sm-6 col-md-2 offset-md-8 text-center">
+        <img class="img-responsive university-logo fade-in" src="style-assets/media/possible/MSUDenver_Formal_2CPos_BlueRed_WhBkgd_FormatA_RGB.svg">
+      </div>
 
-        <div class="col-xs-12 col-sm-4 offset-col-sm-4 col-md-12 text-center">
-          <a href="#start"> <span class="possible-indicator fas fa-chevron-down fa-5x fade-in"></span></a>
-        </div>
+      <div class="col-xs-12 col-sm-4 offset-col-sm-4 col-md-12 text-center">
+        <a href="#start"> <span class="possible-indicator fas fa-chevron-down fa-5x fade-in"></span></a>
       </div>
     </div>
-  </section>
-
+  </div>
+</section>
   <nav id="navbar-possible" class="navbar navbar-light bg-light">
     <a class="navbar-brand" href="#">Are you ready to find your </a>
     <ul class="nav nav-pills">
@@ -211,65 +211,81 @@ const raf =
     <div class="row">
       <div class="col-xs-12 col-md-10 offset-md-1">
         <h2>Are you ready to find your <span class="possible-word">possible</span> ?</h2>
-
-        <select>
-          <option href="#reimagine-higher-education value=" Reimagine higher education">Reimagine higher education</option>
-          <option href="#learners-connect-with-leaders" value="Learners connect with leaders">Learners connect with leaders</option>
-        </select>
+      </div>
+    </div>
+  </div>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-xs-12 col-md-10 offset-md-1">
+        <a href="#reimagine-higher-education">
+          <btn class="btn">Reimagine higher education</btn>
+        </a>
+        <a href="#learners-connect-with-leaders">
+          <btn class="btn">Learners connect with leaders</btn>
+        </a>
+        <a href="#master-your-future">
+          <btn class="btn">Master your future</btn>
+        </a>
+        <a href="#on-the-front-lines-of-cybersecurity">
+          <btn class="btn">On the front lines of cybersecurity</btn>
+        </a>
+        <a href="#brewing-innovation-in-hospitality">
+          <btn class="btn">Brewing innovation in hospitality</btn>
+        </a>
+        <a href="#improving-health-in-colorado">
+          <btn class="btn">Improving health in Colorado</btn>
+        </a>
+        <a href="#teaching-tomorrows-teachers">
+          <btn class="btn">Teaching tomorrow’s teachers</btn>
+        </a>
+        <a href="#operating-satelites-from-the-classroom">
+          <btn class="btn">Operating satellites from the classroom</btn>
+        </a>
+        <a href="#multiply-your-roi">
+          <btn class="btn">Multiply your ROI</btn>
+        </a>
+        <a href="#saving-endangered-languages">
+          <btn class="btn">Saving endangered languages</btn>
+        </a>
       </div>
     </div>
   </div>
 
 </section>
-
+<!--
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-md-12">
-      <a href="#reimagine-higher-education">
-        <btn class="btn">Reimagine higher education</btn>
-      </a>
-      <a href="#learners-connect-with-leaders">
-        <btn class="btn">Learners connect with leaders</btn>
-      </a>
-      <a href="#master-your-future">
-        <btn class="btn">Master your future</btn>
-      </a>
-      <a href="#on-the-front-lines-of-cybersecurity">
-        <btn class="btn">On the front lines of cybersecurity</btn>
-      </a>
-      <a href="#brewing-innovation-in-hospitality">
-        <btn class="btn">Brewing innovation in hospitality</btn>
-      </a>
-      <a href="#improving-health-in-colorado">
-        <btn class="btn">Improving health in Colorado</btn>
-      </a>
-      <a href="#teaching-tomorrows-teachers">
-        <btn class="btn">Teaching tomorrow’s teachers</btn>
-      </a>
-      <a href="#operating-satelites-from-the-classroom">
-        <btn class="btn">Operating satellites from the classroom</btn>
-      </a>
-      <a href="#multiply-your-roi">
-        <btn class="btn">Multiply your ROI</btn>
-      </a>
-      <a href="#saving-endangered-languages">
-        <btn class="btn">Saving endangered languages</btn>
-      </a>
+
     </div>
   </div>
-</div>
+</div> -->
+  <section id="improving-health-in-colorado" class="health-in-colorado">
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12 col-md-8 offset-md-5 well">
+        <h2>A prescription for improving health in Colorado.</h2>
+        <h3>Our new Health Institute integrates 10 disciplines to improve lives, communities and careers.</h3>
+        <p>Help underserved populations navigate <a href="https://red.msudenver.edu/2018/navigating-the-future-of-patient-care.html">access to health care</a>. Lead the way in the <a
+            href="https://red.msudenver.edu/2019/healing-in-two-worlds.html">transformative field of lifestyle medicine</a>. <a href="https://red.msudenver.edu/2017/who-gets-to-be-a-doctor.html">Learn through experience</a> at some of the state’s top
+          health organizations. The road to health leadership and
+          personal wellness runs through MSU Denver.</p>
+      </div>
+    </div>
+  </div>
+</section>
   <!--  -->
   <section class="white-background-right-photo" id="reimagine-higher-education">
   <div class="container">
-    <h2 style="margin-bottom:30px;">What’s <span class="possible-word">possible</span> when you reimagine higher education?</h2>
-    <h3><i>
-        A thriving urban university that fosters student success through classroom-to-career connections, relevant degrees and excellent faculty.
-      </i></h3>
+    <h2>What’s <span class="possible-word">possible</span> when you reimagine higher education?</h2>
+    <h3>
+      A thriving urban university that fosters student success through classroom-to-career connections, relevant degrees and excellent faculty.
+    </h3>
     <div class="row">
       <div class="col-xs-12 col-md-6">
         <p>
           Build and operate satellites at an innovative aerospace company. Make beer at a legendary brewery. Produce an Emmy-winning newscast. All without leaving campus. Plus, our downtown location provides unparalleled access to internships and
-          networks that jump-start careers. Just ask this “SportsCenter” anchor. The possibilities are endless. </p>
+          networks that jump-start careers. Just ask this “SportsCenter” anchor.</p>
         <p style="margin-bottom:20px"> <strong>The possibilities are endless.</strong></p>
       </div>
       <div class="col-xs-12 col-md-6">
@@ -278,24 +294,7 @@ const raf =
     </div>
   </div>
 </section>
-  <section class="" id="learners-connect-with-leaders">
-  <div class="container" style="border: 2px solid #D11242">
-    <h2 style="margin-bottom:30px;">MSU Denver is where learners connect with leaders.</h2>
 
-    <div class="row">
-      <div class="col-xs-12 col-md-6">
-        <h3><i>
-            99% of our classes are taught by faculty, not teaching assistants. They are industry icons, national experts and have the highest degrees in their disciplines.
-          </i></h3>
-        <p>Learn to fight crime from the former director of the NCIS. Analyze graphic novels with the convention director of Denver’s Comic Con. Get bitten by the insect bug with a renowned mosquito biologist. Our professors are experts in their
-          fields, but even better at passing on their expertise to students.</p>
-      </div>
-      <div class="col-xs-12 col-md-6">
-        <img class="img-thumbnail" src="style-assets/media/possible/MockTrial.jpg">
-      </div>
-    </div>
-  </div>
-</section>
   <section id="master-your-future">
   <div class="container">
     <div class="row">
@@ -330,28 +329,34 @@ const raf =
     </div>
   </div>
 </section> -->
-  <section id="improving-health-in-colorado">
+
+  <section id="teaching-tomorrows-teachers" class="teaching-tomorrows-teachers-section">
   <div class="container">
     <div class="row">
-      <div class="col-xs-12">
-        <h2>A prescription for improving health in Colorado.</h2>
-        <h3>Our new Health Institute integrates 10 disciplines to improve lives, communities and careers.</h3>
-        <p>Leading the way in the transformative field of lifestyle medicine. 
-          Developing applied opportunities with partners like Denver Health to empower tomorrow’s wellness leaders.
-          Helping underserved populations navigate access to health care across the state.</p>
-      </div>
-    </div>
-  </div>
-</section>
-  <section id="teaching-tomorrows-teachers">
-  <div class="container">
-    <div class="row">
-      <div class="col-xs-12">
+      <div class="well col-xs-12">
         <h2>Teaching tomorrow’s teachers.</h2>
         <h3>A leading provider of diverse, classroom-ready graduates with a passion to serve Colorado children.</h3>
         <p>Called to <a href="https://red.msudenver.edu/2019/third-gen-teacher-speaks-kids-language.html">teach bilingual students</a>? Need a <a href="https://www.msudenver.edu/teachergrad/">master’s degree</a> to advance in your career? Want to
           <a href="https://red.msudenver.edu/2019/making-dreams-possible.html">open your own school</a>? Whether you’re a <a href="https://red.msudenver.edu/2019/bound-to-educate.html">first-generation student interested in early childhood
             education</a> or a <a href="https://red.msudenver.edu/2017/fit-for-duty-the-veterans-who-teach-pe.html"> veteran going back to school to teach physical education</a>, you’ll get to the head of the class at MSU Denver.</p>
+      </div>
+    </div>
+  </div>
+</section>
+  <section class="" id="learners-connect-with-leaders">
+  <div class="container" style="border: 2px solid #D11242">
+    <h2 style="margin-bottom:30px;">MSU Denver is where learners connect with leaders.</h2>
+
+    <div class="row">
+      <div class="col-xs-12 col-md-6">
+        <h3><i>
+            99% of our classes are taught by faculty, not teaching assistants. They are industry icons, national experts and have the highest degrees in their disciplines.
+          </i></h3>
+        <p>Learn to fight crime from the former director of the NCIS. Analyze graphic novels with the convention director of Denver’s Comic Con. Get bitten by the insect bug with a renowned mosquito biologist. Our professors are experts in their
+          fields, but even better at passing on their expertise to students.</p>
+      </div>
+      <div class="col-xs-12 col-md-6">
+        <img class="img-thumbnail" src="style-assets/media/possible/MockTrial.jpg">
       </div>
     </div>
   </div>
@@ -392,7 +397,7 @@ const raf =
   </div>
 </section> -->
 
-  <section class="white-background-right-photo">
+  <!-- <section class="white-background-right-photo">
   <div class="container">
     <h2 style="margin-bottom:30px;">white-background-right-photo<span class="possible-word">possible</span></h2>
     <div class="row">
@@ -405,8 +410,8 @@ const raf =
       </div>
     </div>
   </div>
-</section>
-  <section class="background-right-copy">
+</section> -->
+  <!-- <section class="background-right-copy">
   <div class="container-fluid">
     <div class="row">
       <div class="col-xs-12 col-md-7 offset-md-5 well">
@@ -422,8 +427,8 @@ const raf =
       </div>
     </div>
   </div>
-</section>
-  <section class="blue-background" id="start">
+</section> -->
+  <!-- <section class="blue-background" id="start">
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-md-8 offset-md-4">
@@ -435,7 +440,7 @@ const raf =
     </div>
   </div>
 
-</section>
+</section> -->
 
   <section class="possible-call-to-action">
   <div class="container">
