replacing start-your-possible with navbar

--- a/development/terminalfour/src/html/possible.html
+++ b/development/terminalfour/src/html/possible.html
@@ -86,7 +86,7 @@
   @@include('possible/introduction.html')
   @@include('possible/dropdown-navbar.html')
 
-  @@include('possible/start-your-possible.html')
+  <!-- @@include('possible/start-your-possible.html') -->
   @@include('possible/improving-health-in-colorado.html')
   <!-- @@include('possible/side-navigation.html') -->
   @@include('possible/reimagine-higher-education.html')
